compiler/tests/invalid_programs/no_end_else.jm
!SyntaxError

if True
  puts("foo")
else
  puts("bar")
